--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,9 @@ dev_dependencies:
   flutter_lints: ^2.0.0
   flutter_slidable: ^3.0.0
   flutter_svg: ^2.0.7
+  json_annotation: ^4.8.1
+  build_runner: ^2.4.6
+  json_serializable: ^6.7.1
   flutter_test:
     sdk: flutter
   platform: ^3.1.0
@@ -52,9 +55,9 @@ flutter:
   # the material Icons class.
   uses-material-design: true
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/
+    - assets/images/
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
   # For details regarding adding assets from package dependencies, see
