--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,15 +33,19 @@ dependencies:
     sdk: flutter
 
 dev_dependencies:
+  build_runner: ^2.4.6
   cached_network_image: ^3.2.3
+  chopper: ^6.1.4
+  chopper_generator: ^6.0.3
   flutter_lints: ^2.0.0
   flutter_slidable: ^3.0.0
   flutter_svg: ^2.0.7
-  json_annotation: ^4.8.1
-  build_runner: ^2.4.6
-  json_serializable: ^6.7.1
   flutter_test:
     sdk: flutter
+  http: ^0.13.4
+  json_annotation: ^4.8.1
+  json_serializable: ^6.7.1
+  logging: ^1.2.0
   platform: ^3.1.0
   shared_preferences: ^2.2.0
 
